copy/paste support for entity modeler

--- a/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
+++ b/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
@@ -36,9 +36,9 @@
 <script type="text/javascript" src="js/dialogs.js"></script>
 <script type="text/javascript" src="js/widgets.js"></script>
 <script type="text/javascript" src="js/serializer.js"></script>
-<script type="text/javascript" src="js/controller.js"></script>
-
+<script type="text/javascript" src="js/clipboard.js"></script>
 <script type="text/javascript" src="js/angular-dialogs.js"></script>
+<script type="text/javascript" src="js/controller.js"></script>
 
 <style>
 	.button:hover {
