--- a/ide/ui/ide-extensions/src/main/resources/ide-extensions/editors/extension/editor.html
+++ b/ide/ui/ide-extensions/src/main/resources/ide-extensions/editors/extension/editor.html
@@ -18,28 +18,20 @@
 <body ng-controller="PageController">
 	<div class="container">
 		<div class="page-header">
-			<h1>Listener Description: {{file}}</h1>
+			<h1>Extension Description: {{file}}</h1>
 		</div>
 		<form>
 			<div class="form-group">
-				<label>Name</label>
-				<input type="text" class="form-control" placeholder="Name of the Queue or the Topic" ng-model="listener.name">
+				<label>Module</label>
+				<input type="text" class="form-control" placeholder="Enter handler" ng-model="extension.module">
 			</div>
 			<div class="form-group">
-				<label>Type</label>
-				<div>
-				    <select class="form-control" ng-model="listener.type">
-				    	<option ng-repeat="option in types" value="{{option.key}}">{{option.label}}</option>
-				    </select>
-			    </div>
-			</div>
-			<div class="form-group">
-				<label>Handler</label>
-				<input type="text" class="form-control" placeholder="Enter handler" ng-model="listener.handler">
+				<label>Extension Point</label>
+				<input type="text" class="form-control" placeholder="Enter Extension Point Name" ng-model="extension.extensionPoint">
 			</div>
 			<div class="form-group">
 				<label>Description</label>
-				<textarea class="form-control" placeholder="Enter description" ng-model="listener.description" cols=20 rows=5></textarea>
+				<textarea class="form-control" placeholder="Enter description" ng-model="extension.description" cols=20 rows=5></textarea>
 			</div>
 			<button type="button" class="btn btn-primary" ng-click="save()">Save</button>
 		</form>
