--- a/ide/ui/ide-jobs/src/main/resources/ide-jobs/editor/editor.html
+++ b/ide/ui/ide-jobs/src/main/resources/ide-jobs/editor/editor.html
@@ -10,6 +10,9 @@
 	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
 	<link type="text/css" rel="stylesheet" href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css">
 	<link type="image/png" rel="shortcut icon" href="/services/v3/web/resources/images/favicon.png" />
+	
+	<!-- Custom IDE Styles -->
+	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
 </head>
 
 <body ng-controller="PageController">
