--- a/ide/ui/ide-security/src/main/resources/ide-security/editors/roles/editor.html
+++ b/ide/ui/ide-security/src/main/resources/ide-security/editors/roles/editor.html
@@ -19,47 +19,23 @@
 
 	<div class="container">
 		<div class="page-header">
-			<h1>Table Description: {{file}}</h1>
+			<h1>Roles Description: {{file}}</h1>
 		</div>
 		<form>
-			<div class="form-group">
-				<label>Type</label>
-				<input type="text" class="form-control" ng-model="table.type" value="TABLE" readonly>
-			</div>
-			<div class="form-group">
-				<label>Name</label>
-				<input type="text" class="form-control" placeholder="Enter name" ng-model="table.name">
-			</div>
-			
-			
 			<div class="container">
 				<button type="button" ng-click="openNewDialog()" class="btn btn-lg btn-primary pull-right">New</button>
 				<table class="table product-table">
 					<thead>
 						<tr>
 							<th>Name</th>
-							<th>Type</th>
-							<th>Length</th>
-							<th>Primary Key</th>
-							<th>Unique</th>
-							<th>Nullable</th>
-							<th>Default</th>
-							<th>Precision</th>
-							<th>Scale</th>
+							<th>Description</th>
 							<th></th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="next in table.columns">
+						<tr ng-repeat="next in roles">
 							<td>{{next.name}}</td>
-							<td>{{next.type}}</td>
-							<td>{{next.length}}</td>
-							<td><span class="fa" ng-class="{'fa-square-o': !next.primaryKey , 'fa-check-square-o': next.primaryKey}"></td>
-							<td><span class="fa" ng-class="{'fa-square-o': !next.unique , 'fa-check-square-o': next.unique}"></td>
-							<td><span class="fa" ng-class="{'fa-square-o': !next.nullable , 'fa-check-square-o': next.nullable}"></span></td>
-							<td>{{next.defaultValue}}</td>
-							<td>{{next.precision}}</td>
-							<td>{{next.scale}}</td>
+							<td>{{next.description}}</td>
 							<td>
 								<i class="close fa fa-2x fa-remove" ng-click="openDeleteDialog(next)"></i>
 								<i class="close fa fa-2x fa-bars" ng-click="openEditDialog(next)" style="margin-right: 0.5em"></i>
@@ -78,9 +54,9 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h3 ng-show="actionType === 'new'" class="modal-title" id="exampleModalLabel">Create Column</h3>
-					<h3 ng-show="actionType === 'update'" class="modal-title" id="exampleModalLabel">Update Column</h3>
-					<h3 ng-show="actionType === 'delete'" class="modal-title" id="exampleModalLabel">Delete Column</h3>
+					<h3 ng-show="actionType === 'new'" class="modal-title" id="exampleModalLabel">Create Role</h3>
+					<h3 ng-show="actionType === 'update'" class="modal-title" id="exampleModalLabel">Update Role</h3>
+					<h3 ng-show="actionType === 'delete'" class="modal-title" id="exampleModalLabel">Delete Role</h3>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
@@ -95,44 +71,13 @@
 							<input type="text" class="form-control" placeholder="Enter name" ng-model="entity.name">
 						</div>
 						<div class="form-group">
-						    <label for="type">Type: </label>
-						    <div>
-							    <select class="form-control" name="type" id="type" ng-model="entity.type">
-							    	<option ng-repeat="option in types" value="{{option.key}}">{{option.label}}</option>
-							    </select>
-							</div>
+							<label>Description</label>
+							<input type="text" class="form-control" placeholder="Enter description" ng-model="entity.description">
 						</div>
-						<div class="form-group">
-							<label>Length</label>
-							<input type="number" class="form-control" placeholder="Enter length" ng-model="entity.length">
-						</div>
-						<div class="form-group">
-							<label>Primary Key</label>
-							<input type="checkbox" class="form-control" placeholder="Enter primary key flag" ng-model="entity.primaryKey" ng-true-value="'true'" ng-false-value="'false'">
-						</div>
-						<div class="form-group">
-							<label>Unique</label>
-							<input type="checkbox" class="form-control" placeholder="Enter unique flag" ng-model="entity.unique" ng-true-value="'true'" ng-false-value="'false'">
-						</div>
-						<div class="form-group">
-							<label>Nullable</label>
-							<input type="checkbox" class="form-control" placeholder="Enter nullable flag" ng-model="entity.nullable" ng-true-value="'true'" ng-false-value="'false'">
-						</div>
-						<div class="form-group">
-							<label>Default Value</label>
-							<input type="text" class="form-control" placeholder="Enter default value" ng-model="entity.defaultValue">
-						</div>
-						<div class="form-group">
-							<label>Precision</label>
-							<input type="number" class="form-control" placeholder="Enter precision" ng-model="entity.precision">
-						</div>
-						<div class="form-group">
-							<label>Scale</label>
-							<input type="number" class="form-control" placeholder="Enter scale" ng-model="entity.scale">
-						</div>
+						
 					</form>
 					<div ng-show="actionType === 'delete'">
-						You are going to delete <b>Column</b> with <b>name = {{entity.name}}</b>?
+						You are going to delete <b>Role</b> with <b>name = {{entity.name}}</b>?
 					</div>
 				</div>
 				<div class="modal-footer">
