open with improvements

--- a/ide/ui/ide-orion/src/main/resources/ide-orion/editor.html
+++ b/ide/ui/ide-orion/src/main/resources/ide-orion/editor.html
@@ -79,6 +79,22 @@
 					return 'text/css';
 				} else if (fileName.endsWith('.json')) {
 					return 'application/json';
+				} else if (fileName.endsWith('.table')) {
+					return 'application/json';
+				} else if (fileName.endsWith('.view')) {
+					return 'application/json';
+				} else if (fileName.endsWith('.extensionpoint')) {
+					return 'application/json';
+				} else if (fileName.endsWith('.extension')) {
+					return 'application/json';
+				} else if (fileName.endsWith('.job')) {
+					return 'application/json';
+				} else if (fileName.endsWith('.listener')) {
+					return 'application/json';
+				} else if (fileName.endsWith('.access')) {
+					return 'application/json';
+				} else if (fileName.endsWith('.roles')) {
+					return 'application/json';
 				}
 				return 'plain/text';
 			}
