--- a/ide/ui/ide-schema/src/main/resources/ide-schema/modeler.html
+++ b/ide/ui/ide-schema/src/main/resources/ide-schema/modeler.html
@@ -192,7 +192,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<label class="col-xs-3 col-form-label">Sclae: </label>
+						<label class="col-xs-3 col-form-label">Scale: </label>
 						<div class="col-xs-3">
 							<input class="form-control" type="text" placeholder="0" ng-model="ctrl.$scope.$parent.cell.value.scale" required="required">
 						</div>
