--- a/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
+++ b/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
@@ -385,13 +385,13 @@
 						</div>
 					</div>
 					<div class="row">
-						<label class="col-xs-3 col-form-label">Drop Dwon Key: </label>
+						<label class="col-xs-3 col-form-label">Dropdown Key: </label>
 						<div class="col-xs-9">
 							<input class="form-control" type="text" placeholder="key property" ng-model="ctrl.$scope.$parent.cell.value.widgetDropDownKey" required="required">
 						</div>
 					</div>
 					<div class="row">
-						<label class="col-xs-3 col-form-label">Drop Dwon Value: </label>
+						<label class="col-xs-3 col-form-label">Dropdown Value: </label>
 						<div class="col-xs-9">
 							<input class="form-control" type="text" placeholder="value property" ng-model="ctrl.$scope.$parent.cell.value.widgetDropDownValue" required="required">
 						</div>
