file menu improvements

--- a/ide/ui/ide-core/src/main/resources/ide/about/about.html
+++ b/ide/ui/ide-core/src/main/resources/ide/about/about.html
@@ -44,24 +44,19 @@
 		</div>
 		<form>
 			<div class="form-group">
-				<label>Version</label>
-				<input type="text" class="form-control" ng-model="version.productVersion" readonly>
+				<label>Version:</label> <strong class="btn-info">{{version.productVersion}}</strong>
 			</div>
 			<div class="form-group">
-				<label>Type</label>
-				<input type="text" class="form-control" ng-model="version.productType" readonly>
+				<label>Type:</label> <strong class="btn-info">{{version.productType}}</strong>
 			</div>
 			<div class="form-group">
-				<label>Instance</label>
-				<input type="text" class="form-control" ng-model="version.instanceName" readonly>
+				<label>Instance:</label> <strong class="btn-info">{{version.instanceName}}</strong>
 			</div>
 			<div class="form-group">
-				<label>Repository</label>
-				<input type="text" class="form-control" ng-model="version.repositoryProvider" readonly>
+				<label>Repository:</label> <strong class="btn-info">{{version.repositoryProvider}}</strong>
 			</div>
 			<div class="form-group">
-				<label>Database</label>
-				<input type="text" class="form-control" ng-model="version.databaseProvider" readonly>
+				<label>Database:</label> <strong class="btn-info">{{version.databaseProvider}}</strong>
 			</div>
 			<div class="form-group">
 				<table class="table table-striped" ng-cloak>
