Relative paths for resources - initial

--- a/ide/ui/ide-console/src/main/resources/ide-console/console.html
+++ b/ide/ui/ide-console/src/main/resources/ide-console/console.html
@@ -14,14 +14,14 @@
 		<meta charset="utf-8" />
 		<title>Eclipse Dirigible Log Console</title>
 		
-		<link rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
+		<link rel="stylesheet" href="../../../../services/v3/core/theme/bootstrap.min.css">
 
 	</head>
 	<body style="font-family: monospace; font-size: x-small" onload="connectToLog()">
 		<div id="console">
 			<div id="content"></div>
 		</div>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+		<script src="../../../../services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 		<script>
 		var connectToLog = function() {
 			try {
