--- a/ide/ui/ide-orion/src/main/resources/ide-orion/repository.html
+++ b/ide/ui/ide-orion/src/main/resources/ide-orion/repository.html
@@ -17,7 +17,7 @@
 		
 		<script src="../ide/ui/message-hub.js"></script>
 		
-	    <link rel="stylesheet" type="text/css" href="/services/v3/core/theme/orion.css"/>
+	    <link rel="stylesheet" type="text/css" href="../../../../services/v3/core/theme/orion.css"/>
         <style>
 	        body {
 	            overflow: hidden;
