--- a/ide/ui/ide-bpm/src/main/resources/ide-bpm/index.html
+++ b/ide/ui/ide-bpm/src/main/resources/ide-bpm/index.html
@@ -91,16 +91,16 @@
 <script src="libs/json3_3.2.6/lib/json3.min.js"></script>
 <![endif]-->
 
-<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
+<script src="../../../../services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 <script src="libs/jquery-ui-1.10.3.custom.min.js"></script>
 
-<script src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
-<script src="/services/v3/web/resources/angular/1.4.7/angular-animate.min.js"></script>
-<script src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
-<script src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
-<script src="/services/v3/web/resources/angular/1.4.7/angular-cookies.min.js"></script>
-<script src="/services/v3/web/resources/angular/1.4.7/angular-sanitize.min.js"></script>
-<script src="/services/v3/web/resources/angular/1.4.7/angular-route.min.js"></script>
+<script src="../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+<script src="../../../../services/v3/web/resources/angular/1.4.7/angular-animate.min.js"></script>
+<script src="../../../../services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
+<script src="../../../../services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+<script src="../../../../services/v3/web/resources/angular/1.4.7/angular-cookies.min.js"></script>
+<script src="../../../../services/v3/web/resources/angular/1.4.7/angular-sanitize.min.js"></script>
+<script src="../../../../services/v3/web/resources/angular/1.4.7/angular-route.min.js"></script>
 <script src="libs/angular-translate_2.15.1/angular-translate.min.js"></script>
 <script src="libs/angular-translate-storage-cookie/angular-translate-storage-cookie.js"></script>
 <script src="libs/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
