--- a/ide/ui/ide-core/src/main/resources/ide/welcome.html
+++ b/ide/ui/ide-core/src/main/resources/ide/welcome.html
@@ -17,17 +17,17 @@
 
    	<title>Eclipse Dirigible &trade;</title>
 
-   	<link href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+   	<link href="../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	
 	<!-- jQuery -->
-	<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
+	<script src="../../../../services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 	
 	<!-- Twitter Bootstrap with Theme Support -->
-	<link rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
-	<script src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="../../../../services/v3/core/theme/bootstrap.min.css">
+	<script src="../../../../services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
 		
 	<!-- Custom IDE Styles -->
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
+	<link type="text/css" rel="stylesheet" href="../../../../services/v3/core/theme/ide.css" />
 	
 	<style>
 		html, body {
@@ -41,9 +41,9 @@
 		}
 	</style>
 	
-	<link rel="stylesheet" href="/services/v3/web/resources/font-dirigible/font.css">
+	<link rel="stylesheet" href="../../../../services/v3/web/resources/font-dirigible/font.css">
 	
-	<link rel="shortcut icon" type="image/png" href="/services/v3/web/resources/images/favicon.png" />
+	<link rel="shortcut icon" type="image/png" href="../../../../services/v3/web/resources/images/favicon.png" />
     
   </head>
   <body class="page">
@@ -60,6 +60,6 @@
 	
 	<iframe src="https://www.youtube.com/embed/uh-vRTCqD1A" style="width: 560px !important; height: 315px !important; border: none" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 	
-	<script src="/services/v3/web/resources/themes/theme.js"></script>	
+	<script src="../../../../services/v3/web/resources/themes/theme.js"></script>	
   </body>
  </html>
