--- a/ide/ui/ide-database/src/main/resources/ide-database/sql/result.html
+++ b/ide/ui/ide-database/src/main/resources/ide-database/sql/result.html
@@ -17,28 +17,28 @@
 
     <title>Eclipse Dirigible &trade; | Database </title>
 
-	<link rel="shortcut icon" type="image/png" href="/services/v3/web/resources/images/favicon.png" />
+	<link rel="shortcut icon" type="image/png" href="../../../../../services/v3/web/resources/images/favicon.png" />
 	
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	
 	<!-- jQuery -->
-	<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
+	<script src="../../../../../services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 	
 	<!-- AngularJS -->
-	<script src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
-	<script src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+	<script src="../../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+	<script src="../../../../../services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
 	
 	<!-- Twitter Bootstrap with Theme Support -->
-	<link rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
-	<script src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="../../../../../services/v3/core/theme/bootstrap.min.css">
+	<script src="../../../../../services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
 	
 	<!-- GoldenLayout with Theme Support -->
-	<script type="text/javascript" src="/services/v3/web/resources/goldenlayout/1.5.9/goldenlayout.js"></script>
-	<link type="text/css" rel="stylesheet" href="/services/v3/web/resources/goldenlayout/1.5.9/goldenlayout-base.css" />
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/goldenlayout-theme.css" />
+	<script type="text/javascript" src="../../../../../services/v3/web/resources/goldenlayout/1.5.9/goldenlayout.js"></script>
+	<link type="text/css" rel="stylesheet" href="../../../../../services/v3/web/resources/goldenlayout/1.5.9/goldenlayout-base.css" />
+	<link type="text/css" rel="stylesheet" href="../../../../../services/v3/core/theme/goldenlayout-theme.css" />
 	
 	<!-- Custom IDE Styles -->
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
+	<link type="text/css" rel="stylesheet" href="../../../../../services/v3/core/theme/ide.css" />
 	
 	<script src="../../ide/ui/message-hub.js"></script>
 	
