--- a/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
@@ -17,27 +17,27 @@
 	
 	<script src="../../ide/ui/message-hub.js"></script>
 	
-	<link href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="../../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 	<!-- jQuery -->
-	<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
+	<script src="../../../../../services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 	
 	<!-- AngularJS -->
-	<script src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
-	<script src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
-	<script src="/services/v3/web/resources/angular/1.4.7/angular-animate.min.js"></script>
-	<script src="/services/v3/web/resources/angular/1.4.7/angular-sanitize.min.js"></script>
+	<script src="../../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+	<script src="../../../../../services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+	<script src="../../../../../services/v3/web/resources/angular/1.4.7/angular-animate.min.js"></script>
+	<script src="../../../../../services/v3/web/resources/angular/1.4.7/angular-sanitize.min.js"></script>
 	
 	<!-- jsTree -->
-	<link href="/services/v3/core/theme/jstree.css" rel="stylesheet">
-	<script src="/services/v3/web/resources/jstree/3.3.4/jstree.js"></script>
+	<link href="../../../../../services/v3/core/theme/jstree.css" rel="stylesheet">
+	<script src="../../../../../services/v3/web/resources/jstree/3.3.4/jstree.js"></script>
 	
 	<!-- Twitter Bootstrap with Theme Support -->
-	<link rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
-	<script src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="../../../../../services/v3/core/theme/bootstrap.min.css">
+	<script src="../../../../../services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
 	
 	<!-- Custom IDE Styles -->
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
+	<link type="text/css" rel="stylesheet" href="../../../../../services/v3/core/theme/ide.css" />
 	
 	<script src="../../ide/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
 	
@@ -160,7 +160,7 @@
 	<!-- Push All -->
 	<div class="modal fade" id="dialogPushAll" tabindex="-1" role="dialog" aria-labelledby="dialogPushAllLabel" aria-hidden="true">
 	    <div class="modal-header">
-	        <h4>Push All Projects from Git</h4>
+	        <h4>Push All Projects to Git</h4>
 	    </div>
 	    <div class="modal-body">
 	        <div class="form-group row">
@@ -200,7 +200,7 @@
 	<!-- Push -->
 	<div class="modal fade" id="dialogPush" tabindex="-1" role="dialog" aria-labelledby="dialogPushLabel" aria-hidden="true">
 	    <div class="modal-header">
-	        <h4>Push Project from Git</h4>
+	        <h4>Push Project to Git</h4>
 	    </div>
 	    <div class="modal-body">
 	        <div class="form-group row">
