--- a/ide/ui/ide-listeners/src/main/resources/ide-listeners/editor/editor.html
+++ b/ide/ui/ide-listeners/src/main/resources/ide-listeners/editor/editor.html
@@ -7,12 +7,12 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
-	<link type="text/css" rel="stylesheet" href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css">
-	<link type="image/png" rel="shortcut icon" href="/services/v3/web/resources/images/favicon.png" />
+	<link type="text/css" rel="stylesheet" href="../../../../../services/v3/core/theme/bootstrap.min.css">
+	<link type="text/css" rel="stylesheet" href="../../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link type="image/png" rel="shortcut icon" href="../../../../../services/v3/web/resources/images/favicon.png" />
 	
 	<!-- Custom IDE Styles -->
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
+	<link type="text/css" rel="stylesheet" href="../../../../../services/v3/core/theme/ide.css" />
 </head>
 
 <body ng-controller="PageController">
@@ -46,12 +46,12 @@
 	</div>
 
 
-	<script type="text/javascript" src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
-	<script type="text/javascript" src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js" async></script>
-	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
-	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+	<script type="text/javascript" src="../../../../../services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
+	<script type="text/javascript" src="../../../../../services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js" async></script>
+	<script type="text/javascript" src="../../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+	<script type="text/javascript" src="../../../../../services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
 
-	<script src="/services/v3/web/ide/ui/message-hub.js"></script>
+	<script src="../../../../../services/v3/web/ide/ui/message-hub.js"></script>
 
 	<script type="text/javascript" src="editor.js"></script>
 
