--- a/ide/ui/ide-monaco/src/main/resources/ide-monaco/editor.html
+++ b/ide/ui/ide-monaco/src/main/resources/ide-monaco/editor.html
@@ -23,7 +23,7 @@
     </head>
     <body id="monaco-browser" spellcheck="false">
     
-    	<script src="/services/v3/core/theme/monaco.js"></script>
+    	<script src="../../../../services/v3/core/theme/monaco.js"></script>
         
 		<div  id="embeddedEditor"></div>
 		
@@ -31,7 +31,7 @@
 		<script>			
 			function FileIO(){
 				var __URL = URL;
-				this.workspaceApiUrl = '/services/v3/ide/workspaces';
+				this.workspaceApiUrl = '../../../../services/v3/ide/workspaces';
 				this.resolveFileName = function() {
 					var url = new __URL(window.location.href);
 					var fileName = url.searchParams.get('file');
