--- a/ide/ui/ide-schema/src/main/resources/ide-schema/modeler.html
+++ b/ide/ui/ide-schema/src/main/resources/ide-schema/modeler.html
@@ -3,7 +3,7 @@
 <title>Schema Modeler</title>
 
 <!-- FontAwesome icon set -->
-<link type="text/css" href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link type="text/css" href="../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
 <!-- Sets the basepath for the library if not in same directory -->
 <script type="text/javascript">
@@ -15,20 +15,20 @@
 <script type="text/javascript" src="../ide/ui/message-hub.js"></script>
 
 <!-- jQuery -->
-<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
+<script src="../../../../services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 
 <!-- AngularJS -->
-<script src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
-<script src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
-<script src="/services/v3/web/resources/angular/1.4.7/angular-animate.min.js"></script>
-<script src="/services/v3/web/resources/angular/1.4.7/angular-sanitize.min.js"></script>
+<script src="../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+<script src="../../../../services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+<script src="../../../../services/v3/web/resources/angular/1.4.7/angular-animate.min.js"></script>
+<script src="../../../../services/v3/web/resources/angular/1.4.7/angular-sanitize.min.js"></script>
 
-<link rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
-<script src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
-<script src="/services/v3/web/ide/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
+<link rel="stylesheet" href="../../../../services/v3/core/theme/bootstrap.min.css">
+<script src="../../../../services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
+<script src="../../../../services/v3/web/ide/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
 
 <!-- Custom IDE Styles -->
-<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
+<link type="text/css" rel="stylesheet" href="../../../../services/v3/core/theme/ide.css" />
 
 <script type="text/javascript" src="js/model.js"></script>
 <script type="text/javascript" src="js/dialogs.js"></script>
