--- a/ide/ui/ide-workspace/src/main/resources/ide-workspace/import.html
+++ b/ide/ui/ide-workspace/src/main/resources/ide-workspace/import.html
@@ -17,25 +17,25 @@
 	
 	<script src="../ide/ui/message-hub.js"></script>
 	
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 	<!-- jQuery -->
-	<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
+	<script src="../../../../services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 	
 	<!-- AngularJS -->
-	<script src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
-	<script src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
-	<script src="/services/v3/web/resources/angular/1.4.7/angular-route.min.js"></script>
-	<script src="/services/v3/web/resources/angular/1.4.7/angular-sanitize.min.js"></script>
+	<script src="../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+	<script src="../../../../services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+	<script src="../../../../services/v3/web/resources/angular/1.4.7/angular-route.min.js"></script>
+	<script src="../../../../services/v3/web/resources/angular/1.4.7/angular-sanitize.min.js"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-file-upload/1.1.5/angular-file-upload.min.js"></script>
 	
 	<!-- Twitter Bootstrap with Theme Support -->
-	<link rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
-	<script src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="../../../../services/v3/core/theme/bootstrap.min.css">
+	<script src="../../../../services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
 	
 	<!-- Custom IDE Styles -->
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
+	<link type="text/css" rel="stylesheet" href="../../../../services/v3/core/theme/ide.css" />
 	
 	<script src="import.js"></script>
 
