--- a/ide/ui/ide-git/src/main/resources/ide-git/index.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/index.html
@@ -44,17 +44,17 @@
 	<div class="statusbar" status-bar>{{message}}</div>
 	
 	<!-- jQuery -->
-	<script type="text/javascript" src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
+	<script type="text/javascript" src="../../../../services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 	
 	<!-- Twitter Bootstrap with Theme Support -->
-	<script type="text/javascript" src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../../../../services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
 	
 	<!-- AngularJS -->
-	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
-	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+	<script type="text/javascript" src="../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+	<script type="text/javascript" src="../../../../services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
 
 	<!-- GoldenLayout with Theme Support -->
-	<script type="text/javascript" src="/services/v3/web/resources/goldenlayout/1.5.9/goldenlayout.min.js"></script>
+	<script type="text/javascript" src="../../../../services/v3/web/resources/goldenlayout/1.5.9/goldenlayout.min.js"></script>
 
 	<script type="text/javascript" src="../ide/ui/message-hub.js"></script>	
 	<script type="text/javascript" src="../ide/ui/ui-layout.js"></script>
