--- a/ide/ui/ide-core/src/main/resources/ide/ui/tmpl/menu.html
+++ b/ide/ui/ide-core/src/main/resources/ide/ui/tmpl/menu.html
@@ -45,7 +45,7 @@
 				<a href=""><span class="fa fa-user user"></span> <span class="user" ng-bind="user.name"></span>&nbsp;</a>
 			  </li>
 			  <li class="hidden-xs">
-				<a href="/logout"><span class="fa fa-power-off"></span></a>
+				<a href="../../../../logout"><span class="fa fa-power-off"></span></a>
 			  </li>
 			</ul>
 		</div>
