--- a/ide/ui/ide-core/src/main/resources/ide/about/about.html
+++ b/ide/ui/ide-core/src/main/resources/ide/about/about.html
@@ -44,19 +44,19 @@
 		</div>
 		<form>
 			<div class="form-group">
-				<label>Version:</label> <strong class="btn-info">{{version.productVersion}}</strong>
+				<label>Version:</label> <strong class="badge">{{version.productVersion}}</strong>
 			</div>
 			<div class="form-group">
-				<label>Type:</label> <strong class="btn-info">{{version.productType}}</strong>
+				<label>Type:</label> <strong class="badge">{{version.productType}}</strong>
 			</div>
 			<div class="form-group">
-				<label>Instance:</label> <strong class="btn-info">{{version.instanceName}}</strong>
+				<label>Instance:</label> <strong class="badge">{{version.instanceName}}</strong>
 			</div>
 			<div class="form-group">
-				<label>Repository:</label> <strong class="btn-info">{{version.repositoryProvider}}</strong>
+				<label>Repository:</label> <strong class="badge">{{version.repositoryProvider}}</strong>
 			</div>
 			<div class="form-group">
-				<label>Database:</label> <strong class="btn-info">{{version.databaseProvider}}</strong>
+				<label>Database:</label> <strong class="badge">{{version.databaseProvider}}</strong>
 			</div>
 			<div class="form-group">
 				<table class="table table-striped" ng-cloak>
