--- a/ide/ui/ide-core/src/main/resources/ide/ui/tmpl/menu.html
+++ b/ide/ui/ide-core/src/main/resources/ide/ui/tmpl/menu.html
@@ -2,7 +2,7 @@
 	<div class="container-flex">
 		<div class="navbar-header">
 			<p class="navbar-brand" style="font-family: Trebuchet MS" href="#">
-					<i class="fa fa-cloud"></i>&nbsp;Eclipse Dirigible &trade;
+					<i class="fa fa-cloud"></i>&nbsp;{{branding.brand}}
  			</p>
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
 				<span class="sr-only">Toggle navigation</span>
