--- a/ide/ui/ide-database/src/main/resources/ide-database/index.html
+++ b/ide/ui/ide-database/src/main/resources/ide-database/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="database" ng-controller="DatabaseController as db">
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	
-    <title>Eclipse Dirigible &trade; | Database </title>
 
-	<link rel="shortcut icon" type="image/png" href="../../../../services/v3/web/resources/images/favicon.png" />
+	<title brandtitle perspective-name="Database"></title>
+
+	<link brandicon/>
 	
 	<!-- FontAwesome icon set -->
     <link type="text/css" href="../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
 	<link type="text/css" rel="stylesheet" href="../../../../services/v3/core/theme/ide.css" />
 </head>
 
-<body ng-app="database" ng-controller="DatabaseController as db">
+<body>
 
 	<div menu menu-data-url="../../js/ide-database/services/menu-database.js"></div>
 	
