--- a/ide/ui/ide-debugger/src/main/resources/ide-debugger/index.html
+++ b/ide/ui/ide-debugger/src/main/resources/ide-debugger/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="debugger" ng-controller="DebuggerController as debugger">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Eclipse Dirigible &trade; | Debugger </title>
+	<title brandtitle perspective-name="Debugger"></title>
 
-	<link rel="shortcut icon" type="image/png" href="../ide/img/favicon.png" />
+	<link brandicon/>
 	
 	<!-- FontAwesome icon set -->
     <link type="text/css" href="../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
 	<link type="text/css" rel="stylesheet" href="../../../../services/v3/core/theme/ide.css" />
 </head>
 
-<body ng-app="debugger" ng-controller="DebuggerController as debugger">
+<body>
 
 	<div menu menu-data-url="../../js/ide-debugger/services/menu-debugger.js"></div>
 	
