--- a/ide/ui/ide-operations/src/main/resources/ide-operations/index.html
+++ b/ide/ui/ide-operations/src/main/resources/ide-operations/index.html
@@ -9,15 +9,15 @@
   ~ SAP - initial API and implementation
   -->
 
-<html lang="en">
+<html lang="en" ng-app="operations" ng-controller="Controller as c">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Eclipse Dirigible &trade; | Operations </title>
+	<title brandtitle perspective-name="Operations"></title>
 
-    <link rel="shortcut icon" type="image/png" href="../../../../services/v3/web/resources/images/favicon.png" />
+	<link brandicon/>
 	
 	<!-- FontAwesome icon set -->
     <link type="text/css" href="../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 	<link type="text/css" rel="stylesheet" href="../../../../services/v3/core/theme/ide.css" />
 </head>
 
-<body ng-app="operations" ng-controller="Controller as c">
+<body>
 
 	<div menu menu-data-url="../../js/ide-operations/services/menu-operations.js"></div>
 	
