--- a/ide/ui/ide-registry/src/main/resources/ide-registry/registry.html
+++ b/ide/ui/ide-registry/src/main/resources/ide-registry/registry.html
@@ -15,7 +15,7 @@
 	
 	<title>Eclipse Dirigible - Registry</title>
 	
-	<script src="../ide/ui/message-hub.js"></script>
+	<script src="../../../../services/v3/web/ide-core/ui/message-hub.js"></script>
 	
 	<link href="../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
