--- a/ide/ui/ide-database/src/main/resources/ide-database/sql/result.html
+++ b/ide/ui/ide-database/src/main/resources/ide-database/sql/result.html
@@ -40,7 +40,7 @@
 	<!-- Custom IDE Styles -->
 	<link type="text/css" rel="stylesheet" href="../../../../../services/v3/core/theme/ide.css" />
 	
-	<script src="../../ide/ui/message-hub.js"></script>
+	<script src="../../../../../services/v3/web/ide-core/ui/message-hub.js"></script>
 	
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
