--- a/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
+++ b/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
@@ -12,7 +12,7 @@
 <!-- Loads and initializes the library -->
 <script type="text/javascript" src="../resources/mxgraph/3.9.1/src/js/mxClient.js"></script>
 
-<script type="text/javascript" src="../ide/ui/message-hub.js"></script>
+<script type="text/javascript" src="../../../../services/v3/web/ide-core/ui/message-hub.js"></script>
 
 <!-- jQuery -->
 <script src="../../../../services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
@@ -25,7 +25,7 @@
 
 <link rel="stylesheet" href="../../../../services/v3/core/theme/bootstrap.min.css">
 <script src="../../../../services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
-<script src="../../../../services/v3/web/ide/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
+<script src="../../../../services/v3/web/ide-core/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
 
 <!-- Custom IDE Styles -->
 <link type="text/css" rel="stylesheet" href="../../../../services/v3/core/theme/ide.css" />
