--- a/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
@@ -15,7 +15,7 @@
 	
 	<title>Eclipse Dirigible - Git</title>
 	
-	<script src="../../ide/ui/message-hub.js"></script>
+	<script src="../../../../../services/v3/web/ide-core/ui/message-hub.js"></script>
 	
 	<link href="../../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -39,7 +39,7 @@
 	<!-- Custom IDE Styles -->
 	<link type="text/css" rel="stylesheet" href="../../../../../services/v3/core/theme/ide.css" />
 	
-	<script src="../../ide/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
+	<script src="../../../../../services/v3/web/ide-core/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
 	
 	<script src="git.js"></script>
 	
