--- a/ide/ui/ide-orion/src/main/resources/ide-orion/repository.html
+++ b/ide/ui/ide-orion/src/main/resources/ide-orion/repository.html
@@ -15,7 +15,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Orion Editor</title>
 		
-		<script src="../ide/ui/message-hub.js"></script>
+		<script src="../../../../services/v3/web/ide-core/ui/message-hub.js"></script>
 		
 	    <link rel="stylesheet" type="text/css" href="../../../../services/v3/core/theme/orion.css"/>
         <style>
