--- a/ide/ui/ide-repository/src/main/resources/ide-repository/index.html
+++ b/ide/ui/ide-repository/src/main/resources/ide-repository/index.html
@@ -36,7 +36,7 @@
 
 <body>
 
-	<div menu menu-data-url="../../js/ide/services/menu.js"></div>
+	<div menu menu-data-url="../../../../services/v3/js/ide-core/services/menu.js"></div>
 	
 	<div class="shell">
 		<div class="sidebar list-group" sidebar active="Repository"></div>
@@ -57,9 +57,9 @@
 	<!-- GoldenLayout with Theme Support -->
 	<script type="text/javascript" src="../../../../services/v3/web/resources/goldenlayout/1.5.9/goldenlayout.min.js"></script>
 
-	<script type="text/javascript" src="../ide/ui/message-hub.js"></script>	
-	<script type="text/javascript" src="../ide/ui/ui-layout.js"></script>
-	<script type="text/javascript" src="../ide/ui/ui-core-ng-modules.js"></script>
+	<script type="text/javascript" src="../../../../services/v3/web/ide-core/ui/message-hub.js"></script>	
+	<script type="text/javascript" src="../../../../services/v3/web/ide-core/ui/ui-layout.js"></script>
+	<script type="text/javascript" src="../../../../services/v3/web/ide-core/ui/ui-core-ng-modules.js"></script>
 
 	<script type="text/javascript">
 		angular.module('repository', ['ngResource', 'ideUiCore'])
