--- a/ide/ui/ide-workbench/src/main/resources/ide/properties.html
+++ b/ide/ui/ide-workbench/src/main/resources/ide/properties.html
@@ -31,7 +31,7 @@
 	<!-- Custom IDE Styles -->
 	<link type="text/css" rel="stylesheet" href="../../../../services/v3/core/theme/ide.css" />
 	
-	<script src="ui/message-hub.js"></script>
+	<script src="../../../../services/v3/web/ide-core/ui/message-hub.js"></script>
 	
 	
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
