--- a/ide/ui/ide-workspace/src/main/resources/ide-workspace/search.html
+++ b/ide/ui/ide-workspace/src/main/resources/ide-workspace/search.html
@@ -15,7 +15,7 @@
 	
 	<title>Eclipse Dirigible - Search</title>
 	
-	<script src="../ide/ui/message-hub.js"></script>
+	<script src="../../../../services/v3/web/ide-core/ui/message-hub.js"></script>
 	
 	<link href="../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -40,9 +40,9 @@
 	<!-- Custom IDE Styles -->
 	<link type="text/css" rel="stylesheet" href="../../../../services/v3/core/theme/ide.css" />
 	
-	<script src="../ide/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
-	<script src="../ide/ui/ui-layout.js"></script>
-	<script src="../ide/ui/ui-core-ng-modules.js"></script>
+	<script src="../../../../services/v3/web/ide-core/ui/ui-bootstrap-tpls-0.14.3.min.js"></script>
+	<script src="../../../../services/v3/web/ide-core/ui/ui-layout.js"></script>
+	<script src="../../../../services/v3/web/ide-core/ui/ui-core-ng-modules.js"></script>
 </head>
 
 <body border="1px" ng-app="workspace" ng-controller="WorkspaceController as workspace">
