fixed: #344 - Key combination for SQL on Mac is incorrect

--- a/ide/ui/ide-database/src/main/resources/ide-database/sql/editor.html
+++ b/ide/ui/ide-database/src/main/resources/ide-database/sql/editor.html
@@ -50,7 +50,7 @@
 			var editor = ace.edit("editor");
 			var aceRange = ace.require('ace/range').Range;
 			var beforeSaveText = "";
-			var sqlPlaceholder = "-- ctrl+x to execute\n";
+			var sqlPlaceholder = "-- ctrl+x to execute (cmd+x for Mac)\n";
 			var messageHub = new FramesMessageHub();
 			
 		    editor.setOptions({
