--- a/ide/ui/ide-git/src/main/resources/ide-git/index.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/index.html
@@ -95,6 +95,8 @@
 		    metadata.username = getParameterByName("username");
 		    metadata.password = getParameterByName("password");
 		    metadata.uri = getParameterByName("uri");
+		    metadata.env = getParameterByName("env");
+		    metadata.env = metadata.env ? JSON.parse(metadata.env) : metadata.env;
 		    if (metadata.repository) {
 		    	window.setTimeout(run, 2000);
 		    }
