[IDE] Run-on - adds "branch" option

--- a/ide/ui/ide-git/src/main/resources/ide-git/index.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/index.html
@@ -95,6 +95,7 @@
 		    metadata.username = getParameterByName("username");
 		    metadata.password = getParameterByName("password");
 		    metadata.uri = getParameterByName("uri");
+		    metadata.branch = getParameterByName("branch");
 		    metadata.env = getParameterByName("env");
 		    metadata.env = metadata.env ? JSON.parse(metadata.env) : metadata.env;
 		    if (metadata.repository) {
